# auth-service

./: .env  Cargo.toml  README.md
Docker/: README.md
migrations/2021-12-15-082254_users/: up.sql
migrations/2021-12-15-082310_confirmations/: down.sql  up.sql
src/: db.rs  emailservice.rs  errors.rs  invitation_handler.rs  lib.rs  main.rs  models.rs  register_handler.rs  schema.rs  utils.rs  vars.rs
