[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# PostgreSQL as our database.
# diesel as our ORM.
# actix-web as our webserver.
# actix-files to serve static files (we’ll use it to serve our CSS file).
# actix-session for…do I really need to explain this one?
# yarte for compiling HTML templates (currently the fastest of the bunch).
# serde for JSON serialization (which I always call Sade for some reason).
# r2d2 for (database) connection pooling.
# dotenv for reading variables from .env files.
# lettre for sending e-mails.
# argonautica for password hashing.
actix-files = "0.5.0"
actix-rt = "2.5.0"
actix-session = "0.4.1"
actix-identity = "0.3"
actix-web = "3.3.2"
actix-cors = "0.5.4"
argonautica = "0.2.0"
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.5"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
lettre = { git = "https://github.com/lettre/lettre" }
native-tls = "0.2.4"
r2d2 = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
#yarte = { version = "0.15.6", features = ["with-actix-web"]  }
yarte = "0.15.6"

[build-dependencies]
#yarte = { version = "0.15.6", features = ["with-actix-web"]  }