[package]
name = "auth-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# PostgreSQL as our database.
# diesel as our ORM.
# actix-web as our webserver.
# actix-files to serve static files (we’ll use it to serve our CSS file).
# actix-session for…do I really need to explain this one?
# yarte for compiling HTML templates (currently the fastest of the bunch).
# serde for JSON serialization (which I always call Sade for some reason).
# r2d2 for (database) connection pooling.
# dotenv for reading variables from .env files.
# lettre for sending e-mails.
# argonautica for password hashing.
actix-identity = "0.4"
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.9"
futures = "0.3.8"
lazy_static = "1.4"
r2d2 = "0.8"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.3"

[build-dependencies]
#yarte = { version = "0.15.6", features = ["with-actix-web"]  }